[package]
authors = ["Andrew Merenbach <andrew@merenbach.com>"]
edition = "2021"
name = "richelieu"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "std_ext",
  "drunken_bishop",
]

[dependencies]
clap = {version = "3.2.22", features = ["derive", "cargo"]}
drunken_bishop = {path = "drunken_bishop"}
itertools = "0.10.5"
serde = "1.0.145"
std_ext = {path = "std_ext"}
